fixed container, and table smaller on mobile

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,4 +22,8 @@
   .hiding {
     display: none;
   }
+
+  .smaller-text td{
+  	font-size: 10px;
+  }
 }
